Fix hero on mobile

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,6 @@
 
 header {
   z-index: 100;
-  background-image: linear-gradient(180deg,rgb(0 0 0 / 80%),rgb(0 0 0 / 50%) 55%,transparent);
 }
 
 header p {
@@ -223,7 +222,7 @@ header.expanded .logo-container {
 .login-buttons a p {
   text-align: center;
   font-size: var(--body-font-size-xs);
-  font-weight: 500; 
+  font-weight: var(--font-weight-bold); 
   margin-top: 5px;
   transition: all 0.3s ease-in-out;
   height: 100%;
@@ -427,6 +426,10 @@ header a.button:hover span.button-text {
   }
 }
 
+#icons-sprite-bitdefender-logo path {
+  fill: currentcolor
+}
+
 @media(min-width: 767px) { /* tablet */
   .logo-container .icon {
     width: 180px;
@@ -523,13 +526,11 @@ header a.button:hover span.button-text {
     margin: 0 19px;
   }
 
-  
-
   .mega-menu div p a{
     position: relative;
     font-size: var(--body-font-size-xs);
     font-weight: 400;
-    color: var(--text-color) !important;
+    color: var(--text-color);
   }
 
   .nav-sections a:first-child{
